card sizing changes

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -385,7 +385,7 @@ a:hover{
   color: var(--brand-color);
 }
 
-.shop-dialog {
+/*.shop-dialog {
   --width: 30%;
 }
 
@@ -402,7 +402,7 @@ a:hover{
   background: var(--sl-color-primary-50);
   border: 3px solid #fff;
   border-radius: 15px;
-}
+}*/
 
 input {
   margin-top: 1em;
