--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -410,6 +410,41 @@ input {
   }
 }
 
+// product page ------------------------
+.about-product {
+  float: right;
+  width: 55vw;
+  text-align: left;
+  margin: 3vw;
+  margin-right: 4vw;
+  //margin-left: 50vw;
+
+  h1 {
+    font-size: 50px;
+    text-transform: uppercase;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+}
+
+.product-image {
+  float: left;
+  margin-top: 2vw;
+  margin-left: 5vw;
+  margin-bottom: 4vw;
+}
+
+.product-img {
+  width: 30vw;
+}
+
+
 // cart -------------------------------
 .cart {
   p {
