--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -475,4 +475,63 @@ input {
   }
 
 
+  .about-product {
+    float: none;
+    margin-left: 20%;
+    align-items: center;
+    
+    
+    h1 {
+      font-size: 30px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 20px;
+    }
+
+  }
+  .product-image {
+    float: none;
+    margin-left: 15%;
+    align-items: center;
+    width: 70vw;
+  }
+
+
+
+}
+
+// RESPONSIVE - MOBILE --------------------
+@media all and (max-width: 375px) {
+
+  .about-product {
+    float: none;
+    margin-left: 10%;
+    align-items: center;
+    
+    
+    h1 {
+      font-size: 20px;
+    }
+
+    h2 {
+      font-size: 10px;
+    }
+
+    p {
+      font-size: 10px;
+    }
+
+  }
+  .product-image {
+    float: none;
+    margin-left: 20%;
+    align-items: center;
+    width: 40vw;
+  }
+  
 }
