--- a/src/scss/_shoelace.scss
+++ b/src/scss/_shoelace.scss
@@ -139,12 +139,76 @@ sl-radio {
   max-width: 40vw;
 }*/
 
-// RESPONSIVE - MOBILE -------------------
-@media all and (max-width: 768px) {
+// RESPONSIVE - TABLET -------------------
+@media all and (max-width: 820px), (min-width:768px) {
   sl-dialog::part(panel) {
     width: 100%;
     height: 100%;
     max-height: none;
     max-width: none;
   }
+
+
+// HOME ------------------------------
+
+
+// SHOP ------------------------------
+
+
+
+// PRODUCT PAGE ----------------------
+.add-cart-btn::part(base),
+.back-btn::part(base) {
+  width: 11em;
+  height: 5em;
+font-size: 10px;
+padding-top: 2px;
 }
+
+// FAVOURITES -------------------------
+
+
+// CONTACT US -------------------------
+
+
+// CART -------------------------------
+
+
+// EDIT PROFILE -----------------------
+
+
+
+}
+
+// RESPONSIVE - MOBILE --------------------
+@media all and (max-width: 375px) {
+
+// HOME ------------------------------
+
+
+// SHOP ------------------------------
+
+
+
+// PRODUCT PAGE ----------------------
+.add-cart-btn::part(base),
+.back-btn::part(base) {
+  width: 10em;
+  height: 2em;
+font-size: 8px;
+padding-bottom: 5em;
+}
+
+// FAVOURITES -------------------------
+
+
+// CONTACT US -------------------------
+
+
+// CART -------------------------------
+
+
+// EDIT PROFILE -----------------------
+
+}
+
