--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -463,7 +463,7 @@ input {
 
 }
 
-// RESPONSIVE - MOBILE -------------------
+// RESPONSIVE - TABLET -------------------
 @media all and (max-width: 768px) {
   .signinup-box {
     width: 90%;
@@ -475,4 +475,147 @@ input {
   }
 
 
+  .about-product {
+    float: none;
+    margin-left: 20%;
+    align-items: center;
+    
+    
+    h1 {
+      font-size: 30px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 20px;
+    }
+
+  }
+  .product-image {
+    float: none;
+    margin-left: 15%;
+    align-items: center;
+    width: 70vw;
+  }
+
+
+
+}
+
+// RESPONSIVE - TABLET -------------------
+@media all and (max-width: 820px), (min-width:768px) {
+
+// SIGN IN/ UP ----------------------
+  .signinup-box {
+    width: 90%;
+    max-width: none;
+  }
+
+  .signinup-logo {
+    min-width: 50%;
+  }
+
+
+// HOME ------------------------------
+
+
+// SHOP ------------------------------
+
+
+// PRODUCT PAGE ----------------------
+  .about-product {
+    float: left;
+    
+    
+    h1 {
+      font-size: 30px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 20px;
+      padding: 2px;
+      #description {
+        width: 50vw;
+      }
+    }
+  }
+
+  .product-image {
+    float: left;
+    img {
+      width: 30vw;
+    }  
+  }
+
+// FAVOURITES -------------------------
+
+
+// CONTACT US -------------------------
+
+
+// CART -------------------------------
+
+
+// EDIT PROFILE -----------------------
+
+
+
+}
+
+// RESPONSIVE - MOBILE --------------------
+@media all and (max-width: 375px) {
+
+// SIGN IN/ UP ----------------------
+
+
+// HOME ------------------------------
+
+
+// SHOP ------------------------------
+
+
+// PRODUCT PAGE ----------------------
+  .about-product {
+    float: left;
+    
+    
+    h1 {
+      font-size: 15px;
+    }
+
+    h2 {
+      font-size: 10px;
+    }
+
+    p {
+      font-size: 10px;
+    }
+
+  }
+  .product-image {
+    float: left;
+    img {
+      width: 60vw;
+      padding-right: 5vw;
+    }
+  }
+
+// FAVOURITES -------------------------
+
+
+// CONTACT US -------------------------
+
+
+// CART -------------------------------
+
+
+// EDIT PROFILE -----------------------
+  
 }
