--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -555,7 +555,11 @@ input {
   }
 
 // FAVOURITES -------------------------
-
+.favourites{
+  h1{
+    font-size: 25px;
+  }
+}
 
 // CONTACT US -------------------------
 
