--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -325,6 +325,18 @@ a:hover{
 }
 
 // sign in + sign up pages ----------
+
+.sign-in {
+  max-height: 100vh;
+  position: relative;
+    top: var(--app-header-height);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    padding: 1em;
+}
+
 .signinup-box,
 .signup-box {
   width: 60vw;
