--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -571,7 +571,15 @@ input {
 @media all and (max-width:768px) {
 
 // SIGN IN/ UP ----------------------
+.signinup-box {
+  width: 90%;
+  max-width: none;
+}
 
+.signinup-logo{
+    width: 25em;
+    margin-top: 25%;
+}
 
 
 // HOME ------------------------------
