--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -529,6 +529,10 @@ input {
 
 
 // SIGN IN/UP -----------------------
+.signinup-logo {
+  width: 25em;
+  margin-top: 45%;
+}
 
 
 // PRODUCT PAGE ----------------------
@@ -568,7 +572,15 @@ input {
 @media all and (max-width:768px) {
 
 // SIGN IN/ UP ----------------------
+.signinup-box {
+  width: 90%;
+  max-width: none;
+}
 
+.signinup-logo{
+    width: 25em;
+    margin-top: 25%;
+}
 
 
 // HOME ------------------------------
@@ -629,7 +641,10 @@ input {
 @media all and (max-width: 375px) {
 
 // SIGN IN/ UP ----------------------
-
+.signinup-logo{
+  max-width: 15em;
+  margin-top: 20%;
+}
 
 // HOME ------------------------------
 
