--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -325,6 +325,46 @@ a:hover{
 }
 
 // sign in + sign up pages ----------
+.sign-in {
+  max-height: 100vh;
+  position: relative;
+    top: var(--app-header-height);
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    padding: 1em;
+}
+
+.signinup-box,
+.signup-box {
+  width: 60vw;
+  text-align: center;
+}
+
+.signinup-box {
+  margin-bottom: none !important;
+}
+
+.signinup-logo {
+  width: 20em;
+  margin: 1.2vw 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5vw;
+}
+
+.sign-up-level {
+  max-width: 45%;
+  min-width: 45%;
+  margin: 1vw auto;
+}
+
+.home-logo {
+  width: 12vw;
+  margin-top: 1.5vw 0;
+  height: auto;
+}
 
 
 
