--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -253,6 +253,10 @@ a:hover{
 }
 
 // page --------------------
+
+.app-logo-mob {
+  width: 200px;
+}
 .page-content {
   position: relative;
   top: var(--app-header-height);
