Render orders and base styling for orders table

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -520,6 +520,44 @@ input {
 }
 
 
+// orders ------------------------------
+
+.orders-grid {
+  margin-top: 2vw;
+  margin-bottom: 30vh;
+}
+
+.orders-table {
+  border: 1px solid var(--brand-color);
+  border-collapse: collapse;
+  width: 90%;
+  margin: 0 auto;
+
+  th, td {
+    padding: 1vw;
+  }
+
+  tr {
+    border-bottom: 1px solid var(--brand-color);
+  }
+
+  th {
+    height: 5vh;
+    text-align: left;
+  }
+
+  td {
+    height: 2vh;
+    max-width: 5vw;
+    text-align: left;
+    word-wrap: break-word;
+  }
+}
+
+tr.customer-order:hover {
+  background-color: var(--body-bg);
+}
+
 // -------------------------------------
 
 .favourites {
