--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -700,10 +700,11 @@ input {
   p {
   font-size: 15px;
   padding-left: 4vw;
+  text-align: center;
   }
 
   h1 {
-    padding-left: 4vw;
+    text-align: center;
   }
  }
   
