--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -692,18 +692,34 @@ input {
 }
 
 .feature-box {
+  display: flex;
+  margin: 10px;
   margin-top: 2em;
-  
-  .feature-img {
-    width: 150px;
-  }
-  .feature-txt-box{
-    float: left;
-    width: 100px;
-    margin-left: 0 auto;
-    
-  }
+  padding: 0;
 }
+
+.feature-txt-box {
+  margin-top: 15%;
+  margin-right: 50px;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.feature-txt {
+  max-width: 100%;
+}
+
+.feature-img {
+  width: 50%;
+  height: 50%;
+  margin-right: 50px;
+  margin-left: 0;
+}
+
+
+  
+
+  
 
 .image-box {
   display: grid;
@@ -711,9 +727,9 @@ input {
   grid-template-rows: repeat(1, 1fr);
   grid-gap: 8px;
   padding: 0;
-  margin: 20px;
+  margin: 10px;
   margin-top: 1em;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
   //align-items: center;
 }
 
@@ -722,6 +738,7 @@ input {
 }
 
 .blurb-box {
+  margin: 10px;
   margin-top: 1em;
   .blurb-txt-box {
     font-size: 1px;
