--- a/src/scss/_shoelace.scss
+++ b/src/scss/_shoelace.scss
@@ -186,12 +186,13 @@ padding-top: 2px;
 
 // HOME ------------------------------
 .shop-now-btn::part(base) {
-  width: 5em;
-  height: 2em;
-  border-radius: 50px;
-  font-size: medium;
-  padding: 5px;
-  margin-top: 0px;
+  width: 6em;
+  height: 3em;
+
+  font-size: 15px;
+  text-align: center;
+  
+
 }
 
 // SHOP ------------------------------
