--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -630,6 +630,53 @@ input {
   margin-bottom: 10vw;
 }
 
+// CONTACT US --------------------------
+
+.about-us {
+
+  padding-bottom: 12vw;
+  p {
+  font-size: 20px;
+  padding-left: 6vw;
+  text-align: center;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 40px;
+    padding-left: 5vw;
+  }
+ }
+  
+ .about-us-container {
+  float: none;
+  width: 80vw;
+  margin: 2vw;
+  
+ }
+  
+ .brandmark-container {
+  float: none;
+  margin-top: 2vw;
+  margin-left: 2vw;
+  margin-bottom: 4vw;
+ }
+  
+ .about-img {
+  opacity: 40%;
+  width: 60%;
+  margin-left: 16vw;
+
+ }
+  
+ .about-logo {
+  position: absolute;
+  left: 32vw;
+  top: 11vw;
+  width: 32vw;
+  margin: 1vw;
+  
+ }
 
 
 }
