--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -631,9 +631,7 @@ input {
 }
 
 // CONTACT US --------------------------
-
 .about-us {
-
   padding-bottom: 12vw;
   p {
   font-size: 20px;
@@ -783,6 +781,54 @@ input {
 }
 
 // CONTACT US -------------------------
+.about-us {
+
+  padding-bottom: 12vw;
+  p {
+  font-size: 20px;
+  padding-left: 8vw;
+  text-align: center;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 40px;
+    padding-left: 7vw;
+  }
+ }
+  
+ .about-us-container {
+  float: none;
+  width: 80vw;
+  margin: 2vw;
+  
+ }
+  
+ .brandmark-container {
+  float: none;
+  margin-top: 2vw;
+  margin-left: 2vw;
+  margin-bottom: 4vw;
+ }
+  
+ .about-img {
+  opacity: 40%;
+  width: 55%;
+  margin-left: 20vw;
+
+ }
+  
+ .about-logo {
+  position: absolute;
+  left: 35vw;
+  top: 10vw;
+  width: 30vw;
+  margin: 1vw;
+  
+ }
+
+
+}
 
 
 // CART -------------------------------
@@ -792,7 +838,7 @@ input {
 
 
 
-}
+
 
 // RESPONSIVE - MOBILE --------------------
 @media all and (max-width: 375px) {
