--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -492,6 +492,9 @@ input {
   padding: 2vw 0;
 }
 
+
+
+
 @media all and (max-width: 425px) {
   .product-column {
     display: block;
@@ -515,6 +518,27 @@ input {
 
    }
 
+}
+
+// CART ---------------------------
+.wrap {
+
+  img{
+    width: 30%;
+    position: absolute;
+    opacity: 40%;
+    margin-left: 32vw;
+    margin-top: 5vw;
+  }
+
+  .content {
+    font-size: 20px;
+    margin-left: 25vw;
+    margin-top: 10vw;
+    text-align: center;
+    position: absolute;
+    
+  }
 }
 
 
@@ -753,8 +777,31 @@ tr.customer-order:hover {
   
  }
 
+// CART ---------------------------
+.wrap {
+
+  img{
+    width:60%;
+    position: absolute;
+    opacity: 40%;
+    margin-left: 17vw;
+    margin-top: 30vw;
+  }
+
+  .content {
+    font-size: 20px;
+    margin-left: 5vw;
+    margin-top: 38vw;
+    text-align: center;
+    position: absolute;
+    
+  }
+}
+
+
 
 }
+
 
 
 
@@ -905,15 +952,38 @@ tr.customer-order:hover {
  }
 
 
-}
+
 
 
 // CART -------------------------------
+.wrap {
 
+  img{
+    width:55%;
+    position: absolute;
+    opacity: 40%;
+    margin-left: 19vw;
+    margin-top: 28vw;
+  }
+
+  .content {
+    font-size: 20px;
+    margin-left: 3vw;
+    margin-top: 33vw;
+    text-align: center;
+    position: absolute;
+    
+  }
+}
 
 // EDIT PROFILE -----------------------
 
 
+
+
+
+
+}
 
 
 
@@ -1074,7 +1144,25 @@ tr.customer-order:hover {
  }
 
 // CART -------------------------------
+.wrap {
 
+  img{
+    width:80%;
+    position: absolute;
+    opacity: 40%;
+    margin-left: 4vw;
+    margin-top: 26vw;
+  }
+
+  .content {
+    font-size: 15px;
+    margin-left: 3vw;
+    margin-top: 33vw;
+    text-align: center;
+    position: absolute;
+    
+  }
+}
 
 // EDIT PROFILE -----------------------
   
