--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1169,6 +1169,7 @@ tr.customer-order:hover {
 
   h1 {
     text-align: center;
+    font-size: 30px;
   }
  }
   
@@ -1196,7 +1197,7 @@ tr.customer-order:hover {
   
  .about-logo {
   position: absolute;
-  left: 27vw;
+  left: 28vw;
   top: 12vw;
   width: 40vw;
   margin: 1vw;
