--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -301,7 +301,7 @@ a:hover{
   background: #fff;
 }
 
-// root ---------------
+// root ---------------------------------------------------------------
 #root {
   position: relative;
   top: 0;
@@ -312,7 +312,7 @@ a:hover{
   padding-bottom: var(--app-header-height);
 }
 
-// page --------------------
+// page content --------------------------------------------------------
 
 .app-logo-mob {
   width: 200px;
@@ -359,14 +359,14 @@ a:hover{
   font-family: var(--body-font-family);
 }
 
-// page forms ------------
+// page forms ----------------------------------------------------------
 .profile, .editProfile, .add-product {
   margin-top: 1vw;
   margin-bottom: 2vw;
   padding-bottom: var(--app-header-height);
 }
 
-// profile ------------
+// profile -------------------------------------------------------------
 .prof-border {
   margin-top: 20px;
   max-width: 800px;
@@ -388,7 +388,7 @@ a:hover{
   color: #fff;
 }
 
-// sign in + sign up pages ----------
+// sign in + sign up pages ------------------------------------------------
 .sign-in {
   max-height: 100vh;
   position: relative;
@@ -553,33 +553,6 @@ input {
 }
 
 
-
-
-@media all and (max-width: 425px) {
-  .product-column {
-    display: block;
-
-    .cart-product {
-      width: 30%;
-    }
-   }
-   
-  .order-summary-column {
-     position: relative;
-     margin-top: 1vw;
-
-     h2 {
-      font-size: 5vw;
-     }
-
-     p {
-      font-size: 4vw;
-     }
-
-   }
-
-}
-
 // CART ---------------------------
 .wrap {
 
@@ -675,60 +648,11 @@ tr.customer-order:hover {
   }
 }
   
+// END DESKTOP VIEW --------------------------------
 
 
 
-
-
-// RESPONSIVE - TABLET -------------------------------------------------------
-@media all and (max-width: 768px) {
-  .signinup-box {
-    width: 90%;
-    max-width: none;
-  }
-
-  .signinup-logo {
-    min-width: 50%;
-  }
-
-
-  .about-product {
-    float: none;
-    margin-left: 20%;
-    align-items: center;
-    
-    
-    h1 {
-      font-size: 30px;
-    }
-
-    h2 {
-      font-size: 20px;
-    }
-
-    p {
-      font-size: 20px;
-    }
-
-  }
-  .product-image {
-    float: none;
-    margin-left: 15%;
-    align-items: center;
-    width: 70vw;
-  }
-
-// SHOP --------------------------------
-.shop {
-  margin-bottom: 9vw;
-}
-
-
-
-
-
-}
-// RESPONSIVE - TABLET -------------------
+// RESPONSIVE - TABLET ------------------------------------------------------------------------------
 @media all and (max-width:820px) {
 
 
@@ -982,7 +906,7 @@ tr.customer-order:hover {
 // PRODUCT PAGE ----------------------
   .about-product {
     float: none;
-    
+    margin-left: 20%;
     
     h1 {
       font-size: 30px;
@@ -1011,9 +935,19 @@ tr.customer-order:hover {
     }  
   }
 
+  .product-image {
+    float: none;
+    margin-left: 14%;
+    align-items: center;
+    width: 68vw;
+    margin-top: 1vw;
+  }
+
   .product-btns {
     margin-left: 12.5vw;
    }
+
+ 
 
 // FAVOURITES -------------------------
 .favourites{
@@ -1206,8 +1140,7 @@ tr.customer-order:hover {
   .about-product {
     float: none;
     margin-left: 18vw;
-    
-    
+    margin-bottom: 10vw;
     
     h1 {
       font-size: 15px;
@@ -1227,6 +1160,7 @@ tr.customer-order:hover {
   }
   .product-image {
     float: none;
+    margin-top: -1vw;
     img {
       width: 60vw;
       padding-right: 5vw;
@@ -1308,6 +1242,28 @@ tr.customer-order:hover {
     
   }
 }
+
+.product-column {
+  display: block;
+
+  .cart-product {
+    width: 30%;
+  }
+ }
+ 
+.order-summary-column {
+   position: relative;
+   margin-top: 1vw;
+
+   h2 {
+    font-size: 5vw;
+   }
+
+   p {
+    font-size: 4vw;
+   }
+
+ }
 
 // EDIT PROFILE -----------------------
 
