--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1224,7 +1224,10 @@ tr.customer-order:hover {
  }
 
 // FAVOURITES -------------------------
-
+ h1 {
+  text-align: center;
+  margin-bottom: -1vw;
+ }
 
 // CONTACT US -------------------------
 .about-us {
