--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -510,6 +510,11 @@ input {
 
 
 // PRODUCT PAGE ------------------------------------------------------------------------------------------------
+
+.product-info {
+  height: 90vh;
+}
+
 .about-product {
   float: right;
   width: 55vw;
@@ -541,6 +546,7 @@ input {
 
 .product-img {
   width: 30vw;
+  padding: 1vw;
 }
 
 
@@ -594,9 +600,8 @@ input {
 // ORDERS --------------------------------------------------------------------------------------------------------------
 
 .orders {
-  min-height: 100vh;
+  height: 100vh;
   margin-top: 5vh;
-  margin-bottom: 50vh;
 
   h1 {
     margin-bottom: 5vh;
@@ -684,11 +689,17 @@ tr.customer-order:hover {
   }
 }
 
-// END DESKTOP VIEW -------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+// RESPONSIVE - PRODUCT PAGE min 1024px
 
 
-
-
+@media all and (max-width:1024px) {
+  .product-info {
+    height: 100vh;
+  }
+  .about-product {
+    width: 45vw;
+  }
+}
 
 
 // RESPONSIVE - TABLET ------------
@@ -745,19 +756,14 @@ tr.customer-order:hover {
 
 
   // PRODUCT PAGE --------------------------------------------------------------------------------------------------
+  .product-info {
+    height: 100%;
+    margin: 0 auto;
+  }
+  
   .about-product {
-    float: none;
-    margin-left: 10em;
-
-    h1 {
-      font-size: 30px;
-      text-align: center;
-    }
-
-    h2 {
-      font-size: 20px;
-      text-align: center;
-    }
+    margin: 0 auto;
+    width: 80%;
 
     p {
       font-size: 20px;
@@ -910,6 +916,7 @@ tr.customer-order:hover {
   }
 
 
+
 }
 
 // END 820 STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -982,7 +989,7 @@ tr.customer-order:hover {
   // PRODUCT PAGE -----------------------------------------------------------------------------------------------------------
   .about-product {
     float: none;
-    margin-left: 20%;
+    margin-left: 10%;
 
     h1 {
       font-size: 30px;
@@ -1022,7 +1029,8 @@ tr.customer-order:hover {
   }
 
   .product-btns {
-    margin-left: 12.5vw;
+    margin-left: 24vw;
+    margin-bottom: 10vh;
   }
 
 
@@ -1244,7 +1252,7 @@ tr.customer-order:hover {
   // PRODUCT PAGE -------------------------------------------------------------------------------------------------------------------------
   .about-product {
     float: none;
-    margin-left: 18vw;
+    margin-left: 10%;
     margin-bottom: 10vw;
 
     h1 {
@@ -1274,8 +1282,24 @@ tr.customer-order:hover {
     }
   }
 
-  .product-btns {
-    margin-left: 5vw;
+ .product-btns {
+  margin-left: 17vw;
+ }
+
+// FAVOURITES -------------------------
+ h1 {
+  text-align: center;
+  margin-bottom: -1vw;
+ }
+
+// CONTACT US -------------------------
+.about-us {
+
+  padding-bottom: 12vw;
+  p {
+  font-size: 15px;
+  padding-left: 5vw;
+  text-align: center;
   }
 
 
@@ -1290,11 +1314,13 @@ tr.customer-order:hover {
   .about-us {
     padding-bottom: 12vw;
 
-    p {
-      font-size: 15px;
-      padding-left: 5vw;
-      text-align: center;
-    }
+  h1 {
+    font-size: 20px;
+    text-align: left;
+    margin-left: 15vw;
+  }
+ 
+}
 
     h1 {
       text-align: center;
@@ -1457,4 +1483,4 @@ tr.customer-order:hover {
 
 }
 
-// END 425 STYLING ------------------------------------------------------------------------------------------------------------------------------------------------------------------
+// END 425 STYLING ---------------------------------------------------------------------------------------------------------------------------------------------------------
