--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -600,8 +600,10 @@ input {
 // ORDERS --------------------------------------------------------------------------------------------------------------
 
 .orders {
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin-top: 5vh;
+  margin-bottom: 40vh;
 
   h1 {
     margin-bottom: 5vh;
@@ -610,7 +612,6 @@ input {
 
 .orders-grid {
   margin-top: 2vw;
-  min-height: max-content;
 }
 
 .orders-table {
