Updates to router, shop access, editProfile redirect after update, clear cart on order submit

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -339,7 +339,7 @@ a:hover {
     padding: 0;
   }
 
-  min-height: max-content;
+  min-height: 80vh;
   margin-bottom: 10vh;
 }
 
@@ -356,7 +356,7 @@ a:hover {
     padding: 0;
   }
 
-  min-height: max-content;
+  min-height: 80vh;
   margin-bottom: 10vh;
 }
 
@@ -1326,9 +1326,8 @@ tr.customer-order:hover {
   }
 
   .products-grid {
- site-fixes
     margin-bottom: -3vw;
-
+  }
 
 
   // CONTACT US --------------------------------------------------------------------------------------------------------------------------------
